--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,15 +30,28 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    //Enables view binding
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //Navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.5.3"
+    // Jetpack Compose Integration
+    implementation "androidx.navigation:navigation-compose:2.7.0-alpha01"
 }
