--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.EWeather"
         tools:targetApi="31">
         <activity
-            android:name="br.com.eweather.mainactivity.MainActivity"
+            android:name="br.com.eweather.ui.view.main.MainActivity"
             android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
