--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
     // Feature module Support
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.5.3"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.6.0"
     // Jetpack Compose Integration
-    implementation "androidx.navigation:navigation-compose:2.7.0-alpha01"
+    implementation "androidx.navigation:navigation-compose:2.7.0-beta01"
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
