--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
+    // Dagger Hilt
+    implementation 'com.google.dagger:hilt-android:2.44.2'
+
 
 }
